/**
 * Snapshot tests for zone outputs
 * Captures the DNS records generated by each zone for regression testing
 */

import { describe, it, expect, beforeEach, afterEach, vi } from "vitest";

// Mock the DNSControl DSL functions to capture output
const mockRecords: unknown[] = [];
const mockDomains: { name: string; records: unknown[] }[] = [];

// Store original globalThis values
const originalD = (globalThis as Record<string, unknown>).D;
const originalA = (globalThis as Record<string, unknown>).A;
const originalAAAA = (globalThis as Record<string, unknown>).AAAA;
const originalCNAME = (globalThis as Record<string, unknown>).CNAME;
const originalMX = (globalThis as Record<string, unknown>).MX;
const originalTXT = (globalThis as Record<string, unknown>).TXT;
const originalSRV = (globalThis as Record<string, unknown>).SRV;
const originalCAA = (globalThis as Record<string, unknown>).CAA;
const originalIGNORE_NAME = (globalThis as Record<string, unknown>).IGNORE_NAME;

describe("Zone Snapshot Tests", () => {
  beforeEach(() => {
    mockRecords.length = 0;
    mockDomains.length = 0;

    // Mock D() to capture domain registration
    (globalThis as Record<string, unknown>).D = vi.fn(
      (name: string, _registrar: unknown, _provider: unknown, ...records: unknown[]) => {
        mockDomains.push({ name, records });
        return { name, records };
      }
    );

    // Mock record functions to capture records
    (globalThis as Record<string, unknown>).A = vi.fn(
      (name: string, ip: string, ...modifiers: unknown[]) => {
        const record = { type: "A", name, ip, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).AAAA = vi.fn(
      (name: string, ip: string, ...modifiers: unknown[]) => {
        const record = { type: "AAAA", name, ip, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).CNAME = vi.fn(
      (name: string, target: string, ...modifiers: unknown[]) => {
        const record = { type: "CNAME", name, target, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).MX = vi.fn(
      (name: string, priority: number, target: string, ...modifiers: unknown[]) => {
        const record = { type: "MX", name, priority, target, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).TXT = vi.fn(
      (name: string, content: string, ...modifiers: unknown[]) => {
        const record = { type: "TXT", name, content, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).SRV = vi.fn(
      (
        name: string,
        priority: number,
        weight: number,
        port: number,
        target: string,
        ...modifiers: unknown[]
      ) => {
        const record = { type: "SRV", name, priority, weight, port, target, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).CAA = vi.fn(
      (name: string, tag: string, value: string, ...modifiers: unknown[]) => {
        const record = { type: "CAA", name, tag, value, modifiers };
        mockRecords.push(record);
        return record;
      }
    );

    (globalThis as Record<string, unknown>).IGNORE_NAME = vi.fn((name: string, types?: string) => {
      return { type: "IGNORE_NAME", name, types };
    });
  });

  afterEach(() => {
    // Restore original values
    (globalThis as Record<string, unknown>).D = originalD;
    (globalThis as Record<string, unknown>).A = originalA;
    (globalThis as Record<string, unknown>).AAAA = originalAAAA;
    (globalThis as Record<string, unknown>).CNAME = originalCNAME;
    (globalThis as Record<string, unknown>).MX = originalMX;
    (globalThis as Record<string, unknown>).TXT = originalTXT;
    (globalThis as Record<string, unknown>).SRV = originalSRV;
    (globalThis as Record<string, unknown>).CAA = originalCAA;
    (globalThis as Record<string, unknown>).IGNORE_NAME = originalIGNORE_NAME;
  });

  describe("Personal Zones", () => {
    it("vlad.gg zone should match snapshot", async () => {
      const { registerVladGG } = await import("../../src/zones/personal/vlad-gg.js");
      registerVladGG();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("vlad.gg");
      expect(mockDomains[0].records).toMatchSnapshot();
    });

    it("vlad.lgbt zone should match snapshot", async () => {
      const { registerVladLGBT } = await import("../../src/zones/personal/vlad-lgbt.js");
      registerVladLGBT();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("vlad.lgbt");
      expect(mockDomains[0].records).toMatchSnapshot();
    });

    it("zaharia.email zone should match snapshot", async () => {
      const { registerZahariaEmail } = await import("../../src/zones/personal/zaharia-email.js");
      registerZahariaEmail();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("zaharia.email");
      expect(mockDomains[0].records).toMatchSnapshot();
    });
  });

  describe("Infrastructure Zones", () => {
    it("plrs.im zone should match snapshot", async () => {
      const { registerPlrsIm } = await import("../../src/zones/infrastructure/plrs-im.js");
      registerPlrsIm();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("plrs.im");
      expect(mockDomains[0].records).toMatchSnapshot();
    });

    it("polaris.gdn zone should match snapshot", async () => {
      const { registerPolarisGdn } = await import("../../src/zones/infrastructure/polaris-gdn.js");
      registerPolarisGdn();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("polaris.gdn");
      expect(mockDomains[0].records).toMatchSnapshot();
    });
  });

  describe("Service Zones", () => {
    it("polaris.video zone should match snapshot", async () => {
      const { registerPolarisVideo } = await import("../../src/zones/services/polaris-video.js");
      registerPolarisVideo();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("polaris.video");
      expect(mockDomains[0].records).toMatchSnapshot();
    });

    it("polaris.rest zone should match snapshot", async () => {
      const { registerPolarisRest } = await import("../../src/zones/services/polaris-rest.js");
      registerPolarisRest();

      expect(mockDomains).toHaveLength(1);
      expect(mockDomains[0].name).toBe("polaris.rest");
      expect(mockDomains[0].records).toMatchSnapshot();
    });
  });
});
